Mon Oct  4 07:57:51 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* cont.c (fiber_memsize): Return size.
	  Before this change, fiber_memsize always returns 0.

Sat Oct  2 22:59:32 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* test/win32ole/test_thread.rb: add for win32ole with Thread.

Thu Sep 30 16:11:08 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_getenv): should return NULL if specified name
	  is empty. a patch from Heesob Park at [ruby-core:32650]

Sun Aug 29 13:22:43 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (rb_thread_method_id_and_class): curried proc has no
	  method.  [ruby-core:31871]

Fri Sep 24 23:44:59 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (sym_call), vm.c (invoke_block_from_c),
	  vm_insnhelper.c (vm_yield_with_cfunc): pass given block.
	  [ruby-core:32075]

	* vm_eval.c (rb_funcall_passing_block): new function to call
	  method with passing given block.

Fri Sep 24 15:50:43 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_to_i): fix rdoc: String#to_i raises an
	  exception when base is invalid. [ruby-core:31685]

Wed Sep 22 16:59:40 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* test/test_prime.rb (TestPrime#test_new): the warning expected have
	  not been displayed when $VERBOSE == nil. Patch by Shota Fukumori
	  a.k.a. sora_h. [ruby-dev:42272]
	  Recovers $stderr even if StringIO.new fails. Reported by unak.

Wed Sep 22 01:55:48 2010  Koichi Sasada  <ko1@atdot.net>

	* bootstraptest/test_method.rb: fix last commit.

Wed Sep 22 01:49:52 2010  Koichi Sasada  <ko1@atdot.net>

	* bootstraptest/test_method.rb: add a test for [ruby-core:30534].

Wed Sep 22 01:49:52 2010  Koichi Sasada  <ko1@atdot.net>

	* bootstraptest/test_method.rb: add a test for [ruby-core:30534].

Mon Sep 20 23:23:05 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (bracket): get rid of scanning at the end of the pattern
	  string, not to raise an exception while globbing command line.