@@ -1,3 +1,9 @@
+Mon Oct  4 09:30:42 2010  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* ext/openssl/lib/openssl/bn.rb (Integer#to_bn): OpenSSL::BN.new
+	  accepts only Strings, so call Integer#to_s(16).
+	  16 is for an optimization. [ruby-dev:42336]
+
 Mon Oct  4 07:57:51 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* cont.c (fiber_memsize): Return size.
